dataset1235/2025-2/2318198438/users/1018361269/executions/1897677159_2667036473.log
== RUN (2025-08-21 01:04:46)
-- CODE: 
celsius=float(input('temperatura'))
kelvin= celsis+273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin= celsis+273.15
            ^^^^^^
NameError: name 'celsis' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin= celsis+273.15
            ^^^^^^
NameError: name 'celsis' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin= celsis+273.15
            ^^^^^^
NameError: name 'celsis' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin= celsis+273.15
            ^^^^^^
NameError: name 'celsis' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin= celsis+273.15
            ^^^^^^
NameError: name 'celsis' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin= celsis+273.15
            ^^^^^^
NameError: name 'celsis' is not defined. Did you mean: 'celsius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:05:43)
-- CODE: 
celsius=float(input('temperatura:'))
kelvin= celsius+273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temperatura:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temperatura:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temperatura:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temperatura:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temperatura:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temperatura:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:05:13)
-- CODE: 
celsius=float(input('temperatura:'))
kelvin= celsius+273.15
print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temperatura:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temperatura:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temperatura:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temperatura:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temperatura:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temperatura:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
